--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "galerea",
   "version": "0.1.0",
-  "homepage": "https://evgKireev.github.io/galerea",
+  "homepage": "https://evgKireev.github.io/Galerea",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
